# SVCL_ardrone_automation

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: .StateestimationParams.cfg.swp  StateestimationParams.cfg
launch/: AI.launch  All.launch  CapturePhotos.launch  CapturePhotos.launch~  DroneCalibrater.launch
logs/153661980515/: logIMU.txt  logPTAM.txt  logPTAMRaw.txt
msg/: tracker.msg
src/: .TraceCircleController.py.swp  .drone_master.py.swl  .drone_master.py.swm  .drone_master.py.swn  .drone_master.py.swo  .drone_master.py.swp  .drone_video.py.swp  .flightstats_display.py.swp  .flightstats_receiver.py.swp  .keyboard_controller.py.swp  .trace_circle_controller.py.swp  drone_master.py  drone_master.py~  drone_tracker.py  drone_tracker.py~  drone_video.py  flightstats_receiver.py  keyboard_controller.py
src/drone_directives/: .OrientLineDirective.py.swp  .PIDHoverColorDirective.py.swp  .PIDObjectOrientDirective.py.swp  FaceDirective.py  HoverColorDirective.py  PIDHoverDirective.py  PIDHoverDirective.py~  PIDYawDirective.py  PIDYawDirective.py~
src/processing_functions/: .process_video.py.swo  .process_video.py.swp  ROT.py  process_position.py  process_video.py  process_video.py~  tracker.py
src/processing_functions/davids/: .detect_color.py.swp
src/resources/: PID History.ods
src/stateestimation/: .MapView.cpp.swp  DroneKalmanFilter.cpp  DroneKalmanFilter.h  EstimationNode.cpp  EstimationNode.cpp~  EstimationNode.h  MapView.cpp  MapView.cpp~  Predictor.cpp  main_stateestimation.cpp
